# RAG_Chat_IPRv1.5

./: .dockerignore  .env.example  .gitignore  API_Server_Guide.md  Architecture_Guide.md  CLI_Usage.md  DEBUG_SUITE_GUIDE.md  Dockerfile.backend  Embedding_Manager_Guide.md  GUI_Usage.md  LangGraph_used.md  Master_Usage.md  RAG Strategies.md  README.md  SAML_implementation.md  Session_History_Encyclopedia.md  TECHNICAL_REPORT_V8 claude.md  TTFT_and_Sematic_Context_Test_results.md  Unified_Database_Guide.md  VL_OCR_Implementation_Plan.md  Vector_Database_Encyclopedia.md  askme.crt  askme.key  build.sh  cli.py  codex_plan.md  debug_rag.py  doc_processing.md  docker-compose-prod.yml  docker-compose.yml  embedding_debug.py  idp.crt  inference_optimization_plan.md  inference_runtime_plan.md  kb_debug.py  main.py  mytoml.toml  nginx.prod.conf  prompt_prefix_caching_plan.md  pyproject.toml  (+16 more)
Admin_Dashboard/: .dockerignore  Dockerfile  Feature_page_map.md  REQUIREMENTS.md  add_admin.py  app.config.json  next.config.ts  package.json  phase_2.md  phase_3.md  proxy.config.js
backend/: app.py  config.py  startup.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.js  package.json
generated_doc_md/: FAQ_LTDP_28Dec11_docling_platinum.md  _Users_Nayan_Desktop_RAG_Chat_IPRv1.5_upload_docs_General_TECHNICAL_REPORT_V8_pymupdf4llm_fallback.md  _Users_Nayan_Desktop_RAG_Chat_IPRv1.5_upload_docs_QnA_FAQ_LTDP_28Dec11_pymupdf4llm.md  upload_docs_General_CGHS GUIDLINES_pymupdf4llm_fallback.md  upload_docs_General_FInal_GFR_upto_31_07_2024_pymupdf4llm_fallback.md  upload_docs_General_LTC-rules_pymupdf4llm_fallback.md  upload_docs_General_Leave-rules_pymupdf4llm_fallback.md  upload_docs_General_Pension_Policy_pymupdf4llm_fallback.md
ideal_qna_format_details/: Ideal_QnA_Format.md  example_qna_complex.md  example_qna_standard.md  example_qna_tables.md  example_qna_technical.md
research/: brute_extract.py  check_chroma.py  (+11 more)
(+352 files in other folders)
