[project]
name = "rag-chat-iprv1-5"
version = "0.1.0"
description = "Bridging Document Intelligence and Agentic Reasoning — Completely Local, Completely Private."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "chromadb>=1.4.0",
    "docling>=2.66.0",
    "fastapi>=0.128.0",
    "flashrank>=0.2.10",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]
