[project]
name = "rag-chat-iprv1-5"
version = "0.1.0"
description = "Bridging Document Intelligence and Agentic Reasoning — Completely Local, Completely Private."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "chromadb>=1.4.0",
    "docling>=2.66.0",
    "fastapi>=0.128.0",
    "flashrank>=0.2.10",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "rapidocr-onnxruntime>=1.4.0",
    "onnxruntime-gpu>=1.19.0",
    "python-dotenv>=1.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
